Trying some stuff for systems tracking

--- a/it_modernization/agency_comprehensive.yaml
+++ b/it_modernization/agency_comprehensive.yaml
@@ -506,7 +506,7 @@ CFPB:
     type: access_granted
     access_type: read
     access_systems:
-    - PRISM
+    - PRISM-CFPB
     - webTA
     - DataInsight
     - USAStaffing
@@ -616,7 +616,7 @@ CFPB:
     type: access_revoked
     access_systems:
     - Entra-CFPB
-    - PRISM
+    - PRISM-CFPB
     - webTA
     - DataInsight
     - USAStaffing
@@ -666,7 +666,7 @@ CFPB:
     type: access_revoked
     access_systems:
     - Entra-CFPB
-    - PRISM
+    - PRISM-CFPB
     - webTA
     - DataInsight
     - USAStaffing
@@ -690,7 +690,7 @@ CFPB:
   - date: 2025-03-28
     type: access_revoked
     access_systems:
-    - PRISM
+    - PRISM-CFPB
     event: Jordan Wick's access to PRISM is revoked, per a court order in to a court order in American Federation of Teachers et al. v Bessent et al., No. 8:25-cv-430
     source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277150/gov.uscourts.dcd.277150.80.5.pdf
     case_no: 8:25-cv-00430
@@ -717,9 +717,16 @@ CFPB:
       risk: PII of CFPB employees, including SSN, home address, and employment records
       sorn: https://www.consumerfinance.gov/privacy/system-records-notices/employee-administrative-records/
       agency: CFPB
-    PRISM:
-      name: PRISM
-      id: PRISM
+    PRISM-CFPB:
+      name: PRISM (CFPB)
+      id: PRISM-CFPB
+      description: System for tracking procurement and contracting
+      link: https://www.doi.gov/ibc/services/finance/financial-systems/prism
+      risk: PII/CUI of contracting recipients
+      agency: CFPB
+    PRISM-NIH:
+      name: PRISM (NIH)
+      id: PRISM-NIH
       description: System for tracking procurement and contracting
       link: https://www.doi.gov/ibc/services/finance/financial-systems/prism
       risk: PII/CUI of contracting recipients
@@ -2027,8 +2034,7 @@ Education:
     source: https://www.washingtonpost.com/nation/2025/02/06/elon-musk-doge-ai-department-education/
     agency: Education
   - date: 2025-02-08
-    type: access_granted
-    access_type: admin
+    type: report
     comment: FIXME get info on the systems being accessed
     event: NBC News reports that Akash Bobba and Ethan Shaotran have admin access to email and had also accessed the website backend
     named:
@@ -2558,7 +2564,7 @@ DOL:
     type: access_granted
     access_type: unknown
     access_systems:
-    - NFJP
+    - REO
     event: Wired reports that three DOGE staffers at DOL were granted access to the DOL's Reentry Employment Opportunities (REO) program, which provides aid to people re-entering society from incarceration
     named:
     - Miles Collins
@@ -2698,8 +2704,7 @@ Treasury:
     - SSA
     - VA
   - date: 2025-01-28
-    type: access_granted
-    access_type: read
+    type: report
     access_systems:
     - PAM
     - SPS
@@ -2710,11 +2715,11 @@ Treasury:
     source: https://storage.courtlistener.com/recap/gov.uscourts.mdd.576070/gov.uscourts.mdd.576070.27.3_1.pdf
     agency: Treasury
   - date: 2025-01-29
-    type: access_changed
+    type: access_granted
     access_type: read-write
     access_systems:
-    - PAM
-    event: A ticket for systems access is issued to give Marko Elez read-write access to PAM
+    - PAM-DB
+    event: A ticket for systems access is issued to give Marko Elez read-write access to PAM-DB
     named:
     - Marko Elez
     source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277055/gov.uscourts.dcd.277055.48.1.pdf
@@ -2723,8 +2728,8 @@ Treasury:
     type: access_changed
     access_type: read
     access_systems:
-    - PAM
-    event: A ticket for systems access is corrected to note that Marko Elez should only have read-only access to the PAM system
+    - PAM-DB
+    event: A ticket for systems access is corrected to note that Marko Elez should only have read-only access to the PAM-DB system
     named:
     - Marko Elez
     source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277055/gov.uscourts.dcd.277055.48.1.pdf
@@ -2733,8 +2738,8 @@ Treasury:
     type: access_changed
     access_type: read-write
     access_systems:
-    - PAM
-    event: A ticket for systems access is corrected to change Marko Elez's access from read-only to read-write for the PAM
+    - PAM-DB
+    event: A ticket for systems access is corrected to change Marko Elez's access from read-only to read-write for the PAM-DB
     named:
     - Marko Elez
     source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277055/gov.uscourts.dcd.277055.48.1.pdf
@@ -2743,8 +2748,8 @@ Treasury:
     type: access_changed
     access_type: read
     access_systems:
-    - PAM
-    event: Another ticket is filed to remove write access from Marko Elez's profile in the PAM system
+    - PAM-DB
+    event: Another ticket is filed to remove write access from Marko Elez's profile in the PAM-DB system
     named:
     - Marko Elez
     source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277055/gov.uscourts.dcd.277055.48.1.pdf
@@ -2761,8 +2766,8 @@ Treasury:
     type: access_granted
     access_type: read
     access_systems:
-    - PAM
-    event: Marko Elez is provided read-only access to the Payment Automation Manager (PAM) Database, Payment Automation Manager (PAM) File System
+    - PAM-FS
+    event: Marko Elez is provided read-only access to the Payment Automation Manager (PAM) File System
     named:
     - Marko Elez
     source: https://storage.courtlistener.com/recap/gov.uscourts.mdd.576070/gov.uscourts.mdd.576070.27.3_1.pdf
@@ -2824,7 +2829,8 @@ Treasury:
   - date: 2025-02-06
     type: access_revoked
     access_systems:
-    - PAM
+    - PAM-FS
+    - PAM-DB
     - SPS
     - ASAP
     event: Marko Elez has his access to Treasury systems revoked due to his resignation
@@ -2949,9 +2955,17 @@ Treasury:
       description: The Federal Disbursement Services (FDS) pays out money, helps collect money, handles foreign transactions, and supports Fiscal Service programs.
       link: https://fiscal.treasury.gov/fds/
       agency: Treasury
-    PAM:
-      name: Payment Automation Manager
-      id: PAM
+    PAM-DB:
+      name: Payment Automation Manager DB
+      id: PAM-DB
+      link: https://fiscal.treasury.gov/pam/
+      description: The U.S. government uses the Payment Automation Manager (PAM) to pay all bills, except payments in foreign currency. PAM processed over 1.2 billion payments in FY 2024, valued at over 4.7 trillion dollars. PAM replaced many older systems that Federal Program Agencies used, saving money and increasing efficiency.
+      risk: PII/CUI of entities receiving payments, SSNs, TINs, bank account info
+      pia: https://www.fiscal.treasury.gov/files/pia/pampclia.pdf
+      agency: Treasury
+    PAM-FS:
+      name: Payment Automation Manager File System
+      id: PAM-FS
       link: https://fiscal.treasury.gov/pam/
       description: The U.S. government uses the Payment Automation Manager (PAM) to pay all bills, except payments in foreign currency. PAM processed over 1.2 billion payments in FY 2024, valued at over 4.7 trillion dollars. PAM replaced many older systems that Federal Program Agencies used, saving money and increasing efficiency.
       risk: PII/CUI of entities receiving payments, SSNs, TINs, bank account info
@@ -4150,15 +4164,6 @@ HHS:
     named:
     - Amy Gleason
     agency: HHS
-  - date: 2025-04-04
-    type: access_revoked
-    event: In a status report, HHS reports that Luke Farritor's HCAS access has been revoked
-    access_systems:
-    - HCAS
-    named:
-    - Luke Farritor
-    source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277150/gov.uscourts.dcd.277150.80.5.pdf
-    agency: HHS
   - date: 2025-04-12
     type: disruption
     event: A DOGE engineer has apparently removed the ability of government agencies to post new grants to grants.gov and requiring them to all be sent to a new email address created this week for reviews
@@ -4931,10 +4936,7 @@ NIH:
     source: https://www.wired.com/story/doge-is-inside-the-national-institutes-of-health-nih/
     agency: NIH
   - date: 2025-02-24
-    type: access_granted
-    access_type: admin
-    access_systems:
-    - NBS
+    type: report
     event: Three DOGE staffers are placed within the NIH Business System Department for access to NIH's central electronic business system, which includes finance, budget, procurement, a property-management system, and a grant-tracking system
     named:
     - Luke Farritor
@@ -4946,9 +4948,8 @@ NIH:
     type: access_granted
     access_type: read
     access_systems:
-    - NBS
-    - PRISM
-    event: Rachel Riley is granted read-only access to the NIH Business System EBS and PRISM systems by the NIH Office of the CIO
+    - PRISM-NIH
+    event: Rachel Riley is granted read-only access to the NIH PRISM systems by the NIH Office of the CIO
     named:
     - Rachel Riley
     case_no: 1:25-cv-00339
@@ -4959,7 +4960,7 @@ NIH:
     access_type: read
     access_systems:
     - NBS
-    - PRISM
+    - PRISM-NIH
     event: Luke Farritor and Conor Fennesy are granted read-only access to NIH Business System EBS and PRISM systems by NIH's office of the CIO
     named:
     - Luke Farritor
@@ -5683,8 +5684,7 @@ SBA:
   - Edward Coristine
   events:
   - date: 2025-02-03
-    type: access_granted
-    access_type: admin
+    type: report
     named:
     - Edward Coristine
     event: Email to SBA staff announces that Edward Coristine was granted access to all systems including HR, contract, and payment systems.
@@ -5798,7 +5798,7 @@ SSA:
     type: access_granted
     access_type: read
     access_systems:
-    - SSNEC
+    - SSNEC-Sandbox
     event: Akash Bobba is rapidly trained and is granted access to anonymized and read-only "sandbox" NUMIDENT data from SSNEC for his purported fraud investigations
     source: https://www.washingtonpost.com/documents/e08aeb0c-ec70-4235-91a0-290da92067b5.pdf?itid=lk_inline_manual_5
     named:
@@ -5864,7 +5864,6 @@ SSA:
     event: Akash Bobba reports issue with the "sandbox" data. Russo demands he gets immediate full access to Enterprise Data Warehouse (EDW), Master Beneficiary Record (MBR) and Supplemental Security Record (SSR) files as well as source code
     source: https://www.washingtonpost.com/documents/e08aeb0c-ec70-4235-91a0-290da92067b5.pdf?itid=lk_inline_manual_5
     named:
-    - Mike Russo
     - Akash Bobba
     agency: SSA
   - date: 2025-02-15
@@ -5953,7 +5952,7 @@ SSA:
     agency: SSA
   - date: 2025-02-19
     type: official
-    event: SSA CIO Mike Russo emails Leland Dudek to grant access to EDW for several "members of [his] team"
+    event: SSA CIO Mike Russo emails Leland Dudek request access to EDW for several "members of [his] team" for Numident, Master Beneficiary Record (MBR) and Supplemental Security Record (SSR) master records, as well as copies of SSA payment files that SSA transmits to the Department of the Treasury, Bureau of the Fiscal Service (BFS) for payment
     named:
     - Leland Dudek
     - Mike Russo
@@ -6142,7 +6141,7 @@ SSA:
     - IRON
     named_aliases:
     - SSA-5
-    event: Via email, "Employee 5" requests access to the IRON Website to investigate people who could be marked dead
+    event: Leland Dudek approves "Employee 5" access to the IRON Website to investigate people beyond a reasonable age who could be marked dead
     comment: Name redacted in court filing
     case_no: 1:25-cv-00596
     source: https://storage.courtlistener.com/recap/gov.uscourts.mdd.577321/gov.uscourts.mdd.577321.121.3.pdf
@@ -6164,13 +6163,30 @@ SSA:
     - Ethan Shaotran
     agency: SSA
   - date: 2025-03-14
-    type: official
-    event: Via email, 'Employee 9' of the DOGE team at SSA requests access to highly-confidential PSSNAP data to review beneficiaries
+    type: access_granted
+    access_systems:
+    - PSSNAP
+    event: Leland Dudek approves access of "Employee 9" to review PSSNAP data with the Enterprise Data Warehouse
+    comment: I think this is Phone SSN Applications data, given the DOGE emphasis on that
     named_aliases:
     - SSA-9
-    comment: Name redacted in court filing
     case_no: 1:25-cv-00596
     source: https://storage.courtlistener.com/recap/gov.uscourts.mdd.577321/gov.uscourts.mdd.577321.121.3.pdf
+    agency: SSA
+  - date: 2025-03-14
+    type: report
+    event: Leland Dudek approves for "Employee 5" to run the proposed tool for death data improvement
+    source: https://storage.courtlistener.com/recap/gov.uscourts.mdd.577321/gov.uscourts.mdd.577321.121.3.pdf
+    named_aliases:
+    - SSA-5
+    agency: SSA
+  - date: 2025-03-15
+    type: access_granted
+    event: Unidentified "Employee 7" at Social Security Administration is granted access to the USCIS SAVE system
+    access_systems:
+    - USCIS-SAVE
+    named_aliases:
+    - SSA-7
     agency: SSA
   - date: 2025-03-16
     type: onboarded
@@ -6184,8 +6200,12 @@ SSA:
   - date: 2025-03-17
     type: access_granted
     access_systems:
-    - PSSNAP
-    event: Employees "6, 7 and 9" are approved to access systems for claims benefit applications
+    - SSA-EDW
+    access_scope:
+    - NUMIDENT
+    - MBR
+    - SSR
+    event: Employees "6, 7 and 9" are approved to access the SSA Enterprise Data Warehouse to access the Numident, Master Beneficiary Record (MBR) and Supplemental Security Record (SSR) master records, as well as copies of SSA payment files that SSA transmits to the Department of the Treasury, Bureau of the Fiscal Service (BFS) for payment
     named_aliases:
     - SSA-6
     - SSA-7
@@ -6202,23 +6222,9 @@ SSA:
     case_no: 1:25-cv-00596
     source: https://storage.courtlistener.com/recap/gov.uscourts.mdd.577321/gov.uscourts.mdd.577321.121.3.pdf
     agency: SSA
-  - date: 2025-03-18
-    type: access_granted
-    access_systems:
-    - PSSNAP
-    event: Leland Dudek approves access of "Employee 9" for additional PSSNAP schema to view Title II beneficiaries
-    named_aliases:
-    - SSA-9
-    comment: Name redacted in court filing
-    case_no: 1:25-cv-00596
-    source: https://storage.courtlistener.com/recap/gov.uscourts.mdd.577321/gov.uscourts.mdd.577321.121.3.pdf
-    agency: SSA
   - date: 2025-03-19
-    type: access_granted
-    access_type: unknown
-    access_systems:
-    - PSSNAP
-    event: Leland Dudek approves access of "Employee 9" of the DOGE team at SSA to highly-confidential PSSNAP data to review beneficiaries
+    type: report
+    event: Leland Dudek approves access of "Employee 9" of the DOGE team at SSA for some additional schemas in PSSNAP
     named_aliases:
     - SSA-9
     comment: Name redacted in court filing
@@ -6493,7 +6499,8 @@ SSA:
     PSSNAP:
       name: PSSNAP
       id: PSSNAP
-      description: FIXME
+      description: SSN application process data (Phone)
+      type: file
       agency: SSA
     IRON:
       name: IRON
